--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 MediaWS/DerivedData/*
 MediaWS/MediaWS.xcworkspace/xcuserdata/*
+MediaWS/MediaSenderApp/MediaSenderApp.xcodeproj/xcuserdata/*
 
-MediaWS/MediaSenderApp/MediaSenderApp.xcodeproj/xcuserdata/dingxiuwei.xcuserdatad/xcdebugger/Breakpoints.xcbkptlist
