--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ MediaWS/MediaWS.xcworkspace/xcuserdata/*
 MediaWS/MediaSenderApp/MediaSenderApp.xcodeproj/xcuserdata/*
 MediaWS/Push2TallkApp/Push2TallkApp.xcodeproj/xcuserdata/*
 MediaWS/OpenCore-AMR/OpenCore-AMR.xcodeproj/xcuserdata/*
+MediaWS/Reachability/Reachability.xcodeproj/xcuserdata/*
