--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ MediaWS/MediaSenderApp/MediaSenderApp.xcodeproj/xcuserdata/*
 MediaWS/Push2TallkApp/Push2TallkApp.xcodeproj/xcuserdata/*
 MediaWS/OpenCore-AMR/OpenCore-AMR.xcodeproj/xcuserdata/*
 MediaWS/Reachability/Reachability.xcodeproj/xcuserdata/*
+MediaWS/Push2TallkApp/Push2TallkApp/Dependencies/Libnice.xcodeproj/xcuserdata/*
+MediaWS/Push2TallkApp/Push2TallkApp/Dependencies/Opus.xcodeproj/xcuserdata/*
+MediaWS/Push2TallkApp/Push2TallkApp/Dependencies/Libnice.xcodeproj/*
+MediaWS/Push2TallkApp/Push2TallkApp/Dependencies/Opus.xcodeproj/*
+MediaWS/DerivedData/*
