--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,11 @@ MediaWS/MediaSenderApp/DerivedData/*
 MediaWS/OggLib/OggLib.xcodeproj/xcuserdata/*
 
 MediaWS/SpeexLib/SpeexLib.xcodeproj/xcuserdata/*
+
+MediaWS/MediaRecieveApp/MediaRecieveApp.xcodeproj/xcuserdata/dingxiuwei.xcuserdatad/*
+
+MediaWS/Libnice/Libnice.xcodeproj/xcuserdata/dingxiuwei.xcuserdatad/xcschemes/xcschememanagement.plist
+
+MediaWS/Libnice/Libnice.xcodeproj/xcuserdata/dingxiuwei.xcuserdatad/xcschemes/xcschememanagement.plist
+
+MediaWS/Opus/Opus.xcodeproj/xcuserdata/dingxiuwei.xcuserdatad/xcschemes/xcschememanagement.plist
